--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "gh-pages": "^6.0.0",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
